# jat

./: CMakeLists.txt  LICENSE  README.md
include/: array.hpp  cuda_ready.hpp  jat.h  kernels.hpp  tensor.hpp
src/: main.cpp
src/cuda/: kernels.cu
tests/: test_jat.cc
